# everlingo

./: .env.example  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CODING_STYLE.md  DOMAIN.md  LICENSE  PRODUCT-FUNC.md  PRODUCT.md  README.md  ROADMAP.md  STATE.md  TASKS.md  TEST_STYLE.md  USER.example.md  everlingo.example.yaml  pyproject.toml
docs/: planning-discuss.md
extension/: README.md  chrome-extension-impl-spec.md  options.html  package-lock.json  package.json  sidecar.html  tsconfig.json  vite.config.ts
tests/: conftest.py  test_agent_retry.py  test_agent_system_notice.py  test_ai_embedding.py  test_dict_teacher.py  test_envelope.py  test_gateway.py  test_gateway_search_hook.py  test_intent.py  test_llm_malformed_logging.py  test_log_utils.py  test_logging.py  test_main_agent.py  test_md_prompt_compiler.py  test_mem_extract_agent.py  test_mem_vault_frontmatter.py  test_mem_vault_mcp_server.py  test_mem_vault_search_cli.py  test_mem_vault_search_client.py  test_mem_vault_search_embedding_search.py  test_mem_vault_search_embedding_store.py  test_mem_vault_search_embedding_worker.py  test_mem_vault_search_events.py  test_mem_vault_search_indexer.py  test_mem_vault_search_indexer_exclude.py  test_mem_vault_search_search.py  test_mem_vault_search_server.py  test_mem_vault_search_sync.py  test_mem_vault_search_tokenizer.py  test_mem_vault_search_watcher.py  test_mem_writer_agent.py  test_mem_writer_search_integration.py  test_profile.py  test_session_event_queue.py  test_setting.py  test_tools.py  test_tracing.py  test_trans_teacher.py  test_tts.py  (+10 more)
(+208 files in other folders)
