[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "everlingo"
version = "0.1.0"
description = "EverLingo - AI 外语学习助手"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "langfuse>=2.0.0",
    "wechatbot-sdk>=0.2.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "edge-tts>=6.1.0",
    "markdown-it-py>=3.0",
]

[project.scripts]
everlingo = "everlingo.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/everlingo"]

[tool.hatch.build.targets.sdist]
include = ["src/everlingo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests (requiring actual LLM API calls)",
]
